Bug 272792 - REGRESSION (277521@main): [ MacOS WK1 ] fast/css/viewport-height-border.html is a flaky crash
Summary: REGRESSION (277521@main): [ MacOS WK1 ] fast/css/viewport-height-border.html ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tim Nguyen (:ntim)
URL:
Keywords: InRadar
Depends on:
Blocks: css-view-transitions
  Show dependency treegraph
 
Reported: 2024-04-16 16:56 PDT by Jay Stfleur
Modified: 2024-04-24 20:02 PDT (History)
5 users (show)

See Also:


Attachments
crashlog (47.76 KB, text/plain)
2024-04-17 08:48 PDT, Ryan Haddad
no flags Details
crashlog Mac WK2 Debug (78.32 KB, text/plain)
2024-04-23 22:25 PDT, Fujii Hironori
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jay Stfleur 2024-04-16 16:56:02 PDT
Description:
fast/css/viewport-height-border.html

Is a flaky crash on Monterey+ Wk1

Buildbot URl:
https://build.webkit.org/#/builders/937/builds/2653

History:
https://results.webkit.org/?suite=layout-tests&test=fast%2Fcss%2Fviewport-height-border.html&flavor=wk1

Diff/Image Diff/Crash Log:
No crash log found
Comment 1 Radar WebKit Bug Importer 2024-04-16 16:56:22 PDT
<rdar://problem/126590072>
Comment 2 EWS 2024-04-16 23:17:29 PDT
Test gardening commit 277595@main (a2f9a36bd9c3): <https://commits.webkit.org/277595@main>

Reviewed commits have been landed. Closing PR #27369 and removing active labels.
Comment 3 Ryan Haddad 2024-04-17 08:48:41 PDT
Created attachment 470962 [details]
crashlog

Thread 0 Crashed::  Dispatch queue: com.apple.main-thread
0   WebCore                       	       0x1168d38d8 vm + 0 (JSGlobalObject.h:1030) [inlined]
1   WebCore                       	       0x1168d38d8 WebCore::createPromiseAndWrapper(WebCore::Document&) + 36 (ViewTransition.cpp:56)
2   WebCore                       	       0x1168d38d4 WebCore::createPromiseAndWrapper(WebCore::Document&) + 32 (ViewTransition.cpp:55)
3   WebCore                       	       0x1168d4824 WebCore::ViewTransition::callUpdateCallback() + 128 (ViewTransition.cpp:158)
4   WebCore                       	       0x1168dc08c operator() + 52 (ViewTransition.cpp:222) [inlined]
5   WebCore                       	       0x1168dc08c WTF::Detail::CallableWrapper<WebCore::ViewTransition::setupViewTransition()::$_5, void>::call() + 92 (Function.h:53)
6   WebCore                       	       0x11683f188 WebCore::EventLoop::run(std::__1::optional<WTF::ApproximateTime>) + 476 (EventLoop.cpp:327)
7   WebCore                       	       0x1168ded38 WebCore::WindowEventLoop::didReachTimeToRun() + 76 (WindowEventLoop.cpp:210)
8   WebCore                       	       0x116fc8a7c WebCore::ThreadTimers::sharedTimerFiredInternal() + 204 (ThreadTimers.cpp:125)
9   WebCore                       	       0x117002024 WebCore::timerFired(__CFRunLoopTimer*, void*) + 28 (MainThreadSharedTimerCF.cpp:85)
Comment 4 Ryan Haddad 2024-04-19 14:39:27 PDT
Pull request: https://github.com/WebKit/WebKit/pull/27539
Comment 5 EWS 2024-04-19 14:48:50 PDT
Test gardening commit 277759@main (ee58959b1748): <https://commits.webkit.org/277759@main>

Reviewed commits have been landed. Closing PR #27539 and removing active labels.
Comment 6 EWS 2024-04-22 15:37:05 PDT
Test gardening commit 277840@main (e07755fef93b): <https://commits.webkit.org/277840@main>

Reviewed commits have been landed. Closing PR #27600 and removing active labels.
Comment 7 EWS 2024-04-22 16:32:28 PDT
Test gardening commit 277844@main (7152674f790c): <https://commits.webkit.org/277844@main>

Reviewed commits have been landed. Closing PR #27602 and removing active labels.
Comment 8 Fujii Hironori 2024-04-23 22:25:09 PDT
Created attachment 471102 [details]
crashlog Mac WK2 Debug

This crash is reproducible with Mac WK2.

> Tools/Scripts/run-webkit-tests --debug --no-build --no-retry --iter=1000 --exit-after-n-c=1 -f fast/css/view-transitions-update-layer-lists-crash.html

0   WebCore                       	       0x7b20d350c JSC::JSGlobalObject::vm() const + 12 (JSGlobalObject.h:1030)
1   WebCore                       	       0x7b5e16060 WebCore::createPromiseAndWrapper(WebCore::Document&) + 64 (ViewTransition.cpp:56)
2   WebCore                       	       0x7b5e172c0 WebCore::ViewTransition::callUpdateCallback() + 256 (ViewTransition.cpp:158)
3   WebCore                       	       0x7b5e2b99e WebCore::ViewTransition::setupViewTransition()::$_5::operator()() const + 142 (ViewTransition.cpp:222)
4   WebCore                       	       0x7b5e2b889 WTF::Detail::CallableWrapper<WebCore::ViewTransition::setupViewTransition()::$_5, void>::call() + 25 (Function.h:53)
5   WebCore                       	       0x7b1d5f872 WTF::Function<void ()>::operator()() const + 130 (Function.h:82)
6   WebCore                       	       0x7b5c80099 WebCore::EventLoopFunctionDispatchTask::execute() + 25 (EventLoop.cpp:469)
7   WebCore                       	       0x7b5c7afa8 WebCore::EventLoop::run(std::__1::optional<WTF::ApproximateTime>) + 488 (EventLoop.cpp:327)
8   WebCore                       	       0x7b5e34c03 WebCore::WindowEventLoop::didReachTimeToRun() + 99 (WindowEventLoop.cpp:210)
9   WebCore                       	       0x7b5e37d79 decltype(*std::declval<WebCore::WindowEventLoop*&>().*std::declval<void (WebCore::WindowEventLoop::*&)()>()()) std::__1::__invoke[abi:un170006]<void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&, void>(void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&) + 105 (invoke.h:308)
10  WebCore                       	       0x7b5e37cfd std::__1::__bind_return<void (WebCore::WindowEventLoop::*)(), std::__1::tuple<WebCore::WindowEventLoop*>, std::__1::tuple<>, __is_valid_bind_return<void (WebCore::WindowEventLoop::*)(), std::__1::tuple<WebCore::WindowEventLoop*>, std::__1::tuple<>>::value>::type std::__1::__apply_functor[abi:un170006]<void (WebCore::WindowEventLoop::*)(), std::__1::tuple<WebCore::WindowEventLoop*>, 0ul, std::__1::tuple<>>(void (WebCore::WindowEventLoop::*&)(), std::__1::tuple<WebCore::WindowEventLoop*>&, std::__1::__tuple_indices<0ul>, std::__1::tuple<>&&) + 61 (bind.h:260)
11  WebCore                       	       0x7b5e37cb0 std::__1::__bind_return<void (WebCore::WindowEventLoop::*)(), std::__1::tuple<WebCore::WindowEventLoop*>, std::__1::tuple<>, __is_valid_bind_return<void (WebCore::WindowEventLoop::*)(), std::__1::tuple<WebCore::WindowEventLoop*>, std::__1::tuple<>>::value>::type std::__1::__bind<void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*>::operator()[abi:un170006]<>() + 32 (bind.h:292)
12  WebCore                       	       0x7b5e37c69 WTF::Detail::CallableWrapper<std::__1::__bind<void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*>, void>::call() + 25 (Function.h:53)
13  WebCore                       	       0x7b1d5f872 WTF::Function<void ()>::operator()() const + 130 (Function.h:82)
14  WebCore                       	       0x7b1e98929 WebCore::Timer::fired() + 25 (Timer.h:159)
15  WebCore                       	       0x7b6e3e220 WebCore::ThreadTimers::sharedTimerFiredInternal() + 672 (ThreadTimers.cpp:125)
16  WebCore                       	       0x7b6e47f61 WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0::operator()() const + 33 (ThreadTimers.cpp:65)
17  WebCore                       	       0x7b6e47f19 WTF::Detail::CallableWrapper<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0, void>::call() + 25 (Function.h:53)
18  WebCore                       	       0x7b1d5f872 WTF::Function<void ()>::operator()() const + 130 (Function.h:82)
19  WebCore                       	       0x7b6dec041 WebCore::MainThreadSharedTimer::fired() + 129 (MainThreadSharedTimer.cpp:83)
20  WebCore                       	       0x7b6ee2426 WebCore::timerFired(__CFRunLoopTimer*, void*) + 38 (MainThreadSharedTimerCF.cpp:85)
21  CoreFoundation                	    0x7ff80ea96e6c __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ + 20
22  CoreFoundation                	    0x7ff80ea96a1a __CFRunLoopDoTimer + 785
23  CoreFoundation                	    0x7ff80ea96656 __CFRunLoopDoTimers + 285
24  CoreFoundation                	    0x7ff80ea7a932 __CFRunLoopRun + 2104
25  CoreFoundation                	    0x7ff80ea79b32 CFRunLoopRunSpecific + 557
26  Foundation                    	    0x7ff80fa2b141 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] + 216
27  Foundation                    	    0x7ff80faad30b -[NSRunLoop(NSRunLoop) run] + 76
28  libxpc.dylib                  	    0x7ff80e6b84d9 _xpc_objc_main + 606
29  libxpc.dylib                  	    0x7ff80e6c504b _xpc_main + 259
30  libxpc.dylib                  	    0x7ff80e6b80fc xpc_main + 56
31  WebKit                        	       0x7663ca352 WebKit::XPCServiceMain(int, char const**) + 146 (XPCServiceMain.mm:311)
32  WebKit                        	       0x768865b66 WKXPCServiceMain + 54 (WKMain.mm:42)
33  com.apple.WebKit.WebContent.Development	       0x101713f72 main + 50 (AuxiliaryProcessMain.cpp:32)
34  dyld                          	    0x7ff80e613366 start + 1942
Comment 9 Tim Nguyen (:ntim) 2024-04-24 14:55:25 PDT
Pull request: https://github.com/WebKit/WebKit/pull/27711
Comment 10 EWS 2024-04-24 20:02:13 PDT
Committed 277958@main (f6ed29f91fc8): <https://commits.webkit.org/277958@main>

Reviewed commits have been landed. Closing PR #27711 and removing active labels.