[view-transitions] Clear view transition on navigation https://bugs.webkit.org/show_bug.cgi?id=272792 rdar://126590072

Reviewed by Chris Dumez.

The VT crashtests were causing the following test to flakily crash. To fix this, clear the view transition when the user navigates by
using ActiveDOMObject and defining a stop method.

Also protect the document in `ViewTransition::callUpdateCallback`.

* LayoutTests/platform/mac-wk1/TestExpectations:
* Source/WebCore/dom/ViewTransition.cpp:
(WebCore::ViewTransition::ViewTransition):
(WebCore::ViewTransition::create):
(WebCore::ViewTransition::skipViewTransition):
(WebCore::ViewTransition::callUpdateCallback):
(WebCore::ViewTransition::setupViewTransition):
(WebCore::ViewTransition::captureOldState):
(WebCore::ViewTransition::captureNewState):
(WebCore::ViewTransition::setupTransitionPseudoElements):
(WebCore::ViewTransition::handleTransitionFrame):
(WebCore::ViewTransition::clearViewTransition):
(WebCore::ViewTransition::updatePseudoElementStyles):
(WebCore::ViewTransition::stop):
* Source/WebCore/dom/ViewTransition.h:
(WebCore::ViewTransition::document const):
(WebCore::ViewTransition::protectedDocument const):
* Source/WebCore/dom/ViewTransition.idl:

Canonical link: https://commits.webkit.org/277958@main